Added button to generate a new maze

--- a/maze/index.html
+++ b/maze/index.html
@@ -3,7 +3,7 @@
     <head>
         <style>
             canvas {
-                border:1px solid #d3d3d3;
+                background-color: lightblue;
             }
         </style>
         <script src="index.js"></script>
@@ -13,5 +13,8 @@
         <script src="solver.js"></script>
     </head>
     <body>
+        <div id="maze"></div>
+        <input type="button" id="generate" value="generate">
+        <!-- <input type="button" id="solve" value="solve"> -->
     </body>
 </html>
