Replaced parameters x, y with object Coords(x, y)

--- a/maze/index.html
+++ b/maze/index.html
@@ -9,6 +9,7 @@
         <script src="index.js"></script>
         <script src="area.js"></script>
         <script src="generator.js"></script>
+        <script src="coords.js"></script>
         <script src="game.js"></script>
         <script src="solver.js"></script>
     </head>
