Added player's walk using buttons

--- a/maze/index.html
+++ b/maze/index.html
@@ -14,6 +14,10 @@
         <script src="solver.js"></script>
     </head>
     <body>
+        <input type="button" id="up" value="up">
+        <input type="button" id="down" value="down">
+        <input type="button" id="right" value="right">
+        <input type="button" id="left" value="left">
         <div id="maze"></div>
         <input type="button" id="generate" value="generate">
         <!-- <input type="button" id="solve" value="solve"> -->
