--- a/maze/index.html
+++ b/maze/index.html
@@ -16,10 +16,10 @@
     <body>
         <input type="button" id="up" value="up">
         <input type="button" id="down" value="down">
-        <input type="button" id="right" value="right">
         <input type="button" id="left" value="left">
+        <input type="button" id="right" value="right">
         <div id="maze"></div>
         <input type="button" id="generate" value="generate">
-        <!-- <input type="button" id="solve" value="solve"> -->
+        <input type="button" id="solve" value="solve">
     </body>
 </html>
