Changed position of buttons in index.html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <script src="solver.js"></script>
     </head>
     <body>
+        <input type="button" id="generate" value="generate">
+        <input type="button" id="solve" value="solve">
+        Controls:
         <input type="button" id="up" value="up">
         <input type="button" id="down" value="down">
         <input type="button" id="left" value="left">
         <input type="button" id="right" value="right">
         <div id="maze"></div>
-        <input type="button" id="generate" value="generate">
-        <input type="button" id="solve" value="solve">
     </body>
 </html>
